Bug fix fetch polyfill, sound button to the right, disable camback on iphone and check if Nanocosmos is possible (if not use jsmpeg)

--- a/src/components/pages/videochat/videochat.scss
+++ b/src/components/pages/videochat/videochat.scss
@@ -266,16 +266,16 @@ $streamback-height-small: calc(#{$streamback-height} / 2);
     }
 
     &__mute-right {
-        position: relative;
+        position: absolute;
         z-index: 2;
-        float: right;
+        right: 0px;
+        top: 10px;
         color: $pallete-2;
         @include rem(font-size, 26px);
-        //background: $semi-transparent-bg;
+        background: $semi-transparent-bg;
         @include rem(padding, 6px 15px);
         @include border-left-radius(5px);
         cursor: pointer;
-        margin-top: -50px;
     }
 
     &__favourite {
